tests/RV64M/invalid/src/003-invalid4.s
# Invalid instruction placeholder 4
.text

.global _start

_start:
